@@ -153,7 +153,10 @@ public class MoveDelegate implements IDelegate, IMoveDelegate
                     }
                 }
                 if (!found)
-                    throw new IllegalStateException("Cannot load all units");
+                    throw new IllegalStateException("Cannot load all land units in sea transports. " +
+                    		"Please make sure you have enough transports. " +
+                    		"You may need to re-order the xml's placement of transports and land units, " +
+                    		"as the engine will try to fill them in the order they are given.");
             }
             
         }
@@ -643,7 +646,7 @@ public class MoveDelegate implements IDelegate, IMoveDelegate
             PlayerID player = iter.next();
             //Check if player still has units to place
             if (!player.equals(m_player)) // && !player.getUnits().isEmpty()
-                util.removeAirThatCantLand(player, (player.getUnits().someMatch(Matches.UnitIsCarrier) && lhtrCarrierProd));
+                util.removeAirThatCantLand(player, ((player.getUnits().someMatch(Matches.UnitIsCarrier) || hasProducedCarriers) && lhtrCarrierProd));
         }
     }
    
