@@ -1,4 +1,10 @@
 Changes for 1.3.2.2
+* Fixed null pointer error in Strong AI landing of air units for players with impassible capitals. (veqryn)
+
+* Changed savegame-xml exporter to add occupiedTerrOf to any territory not owned by current owner. (veqryn)
+
+* Fixed bug in validation of air that can't land for mixed allied and owned air attempting to land where there already is a carrier and a new carrier will also be placed. (veqryn)
+
 * Fixed null pointer error in Strong AI sea movement. (veqryn)
 
 
